--- a/ProjectEulerSolutions.ipynb
+++ b/ProjectEulerSolutions.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "ProjectEulerSolutions.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMzYuUuYSB4gX6YSxi4lGCX"
     },
     "kernelspec": {
       "name": "python3",
@@ -28,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Smallest Multiple"
+        "#### [Smallest Multiple](https://projecteuler.net/problem=5)"
       ],
       "metadata": {
         "id": "En1Y9AcHTRei"
@@ -60,24 +61,22 @@
         "  if valid:\n",
         "    print(i)\n",
         "    break\n",
-        "  i += 1\n",
-        "print('hello')\n"
+        "  i += 1\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9nFPiiQeENmY",
-        "outputId": "7b207fc1-26c7-4ca4-fd72-8dbd5dfc19a3"
+        "outputId": "7db7b054-7fff-45b7-d6fe-c72c920c5794"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "232792560\n",
-            "hello\n"
+            "232792560\n"
           ]
         }
       ]
@@ -85,7 +84,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Multiples of 3 or 5"
+        "#### [Multiples of 3 or 5](https://projecteuler.net/problem=1)"
       ],
       "metadata": {
         "id": "WX8xnQtX-6u3"
@@ -123,7 +122,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Even fibonacci numbers"
+        "#### [Even fibonacci numbers](https://projecteuler.net/problem=2)"
       ],
       "metadata": {
         "id": "kK6mzE7KAGm-"
@@ -148,7 +147,6 @@
         "  first = second\n",
         "  second = temp + second\n",
         "  if (second % 2 == 0):\n",
-        "    print(second)\n",
         "    sum += second\n",
         "\n",
         "end = time.time()\n",
@@ -162,25 +160,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oIUjiXiUAJ1e",
-        "outputId": "2ee580bd-23fa-497a-bb65-ce101b87ec9e"
+        "outputId": "d89eb6eb-786e-4cd4-e377-1b8906b6f22f"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "8\n",
-            "34\n",
-            "144\n",
-            "610\n",
-            "2584\n",
-            "10946\n",
-            "46368\n",
-            "196418\n",
-            "832040\n",
-            "3524578\n",
-            "time:  0.001005411148071289\n",
+            "time:  0.0001506805419921875\n",
             "4613732\n"
           ]
         }
@@ -189,7 +177,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Largest Prime Factor of 600851475143"
+        "#### [Largest Prime Factor of 600851475143](https://projecteuler.net/problem=3)"
       ],
       "metadata": {
         "id": "760xJ9ZYKwxq"
@@ -214,8 +202,7 @@
         "  if n > 2:\n",
         "      print(n)\n",
         "\n",
-        "# prime_factors(600851475143)\n",
-        "prime_factors(81)\n",
+        "prime_factors(600851475143)\n",
         "  "
       ],
       "metadata": {
@@ -223,18 +210,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E3jXRyjNK3qf",
-        "outputId": "74b9d808-183d-424f-9f0e-56f1e7eb30b0"
+        "outputId": "c5f41119-a6da-4684-f35b-073a3346b178"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3\n",
-            "3\n",
-            "3\n",
-            "3\n"
+            "71\n",
+            "839\n",
+            "1471\n",
+            "6857\n"
           ]
         }
       ]
@@ -242,7 +229,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Largest palindrome product"
+        "#### [Largest palindrome product](https://projecteuler.net/problem=4)"
       ],
       "metadata": {
         "id": "44G_vRfG3BNE"
@@ -293,7 +280,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Sum square difference"
+        "#### [Sum square difference](https://projecteuler.net/problem=6)"
       ],
       "metadata": {
         "id": "dY_dpjIES11_"
@@ -325,7 +312,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Largest product in a series"
+        "#### [Largest product in a series](https://projecteuler.net/problem=8)"
       ],
       "metadata": {
         "id": "1PF05-ezl5pb"
@@ -370,7 +357,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### #9 Special Pythagorean triplet"
+        "#### [#9 Special Pythagorean triplet](https://projecteuler.net/problem=9)"
       ],
       "metadata": {
         "id": "PvYArMuuJlaG"
@@ -411,7 +398,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### #10 Summation of Primes"
+        "#### [#10 Summation of Primes](https://projecteuler.net/problem=10)"
       ],
       "metadata": {
         "id": "Hxf1Pz533mC2"
@@ -471,7 +458,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### #11 Largest product in a grid"
+        "#### [#11 Largest product in a grid](https://projecteuler.net/problem=11)"
       ],
       "metadata": {
         "id": "yaOLz_Q5C7x5"
@@ -586,7 +573,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Highly divisible triangular number"
+        "#### [Highly divisible triangular number](https://projecteuler.net/problem=12)"
       ],
       "metadata": {
         "id": "RWUCcyKNK-hu"
@@ -607,11 +594,11 @@
         "            if other != div:\n",
         "                factors.append(other)\n",
         "    return factors\n",
-        "def euler_12():\n",
+        "def highly_divis_triangular_number():\n",
         "    for number in triangle_numbers():\n",
         "        if len(factors(number)) >= 500:\n",
         "            return number\n",
-        "print(euler_12())"
+        "print(highly_divis_triangular_number())"
       ],
       "metadata": {
         "colab": {
