add counting sundays

--- a/ProjectEulerSolutions.ipynb
+++ b/ProjectEulerSolutions.ipynb
@@ -6,7 +6,7 @@
       "name": "ProjectEulerSolutions.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMzYuUuYSB4gX6YSxi4lGCX"
+      "authorship_tag": "ABX9TyMQE11EC61w3rFqsNmaDSf1"
     },
     "kernelspec": {
       "name": "python3",
@@ -70,7 +70,7 @@
         "id": "9nFPiiQeENmY",
         "outputId": "7db7b054-7fff-45b7-d6fe-c72c920c5794"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,7 +162,7 @@
         "id": "oIUjiXiUAJ1e",
         "outputId": "d89eb6eb-786e-4cd4-e377-1b8906b6f22f"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,7 +212,7 @@
         "id": "E3jXRyjNK3qf",
         "outputId": "c5f41119-a6da-4684-f35b-073a3346b178"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1049,6 +1049,78 @@
           "name": "stdout",
           "text": [
             "1074\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### [Counting Sundays](https://projecteuler.net/problem=19)"
+      ],
+      "metadata": {
+        "id": "Z0SShNWBF7l_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "days = {\n",
+        "    0: 31,\n",
+        "    1: 28,\n",
+        "    2: 31,\n",
+        "    3: 30,\n",
+        "    4: 31,\n",
+        "    5: 30,\n",
+        "    6: 31,\n",
+        "    7: 31,\n",
+        "    8: 30,\n",
+        "    9: 31,\n",
+        "    10: 30,\n",
+        "    11: 31\n",
+        "}\n",
+        "\n",
+        "weekday = 0\n",
+        "# loop through 1900's days to get weekday of 1 Jan 1901 - do not count any sundays\n",
+        "for i in range(12):\n",
+        "  for day in range(1, days[i] + 1):\n",
+        "    weekday = 0 if (weekday == 6) else weekday + 1\n",
+        "\n",
+        "# 1 Jan 1901 was a Tuesday\n",
+        "print(weekday)\n",
+        "\n",
+        "sundays = 0\n",
+        "\n",
+        "for year in range(1901, 2001):\n",
+        "  leap = False\n",
+        "  if (year % 4) == 0:\n",
+        "    leap = True\n",
+        "  for month in range(12):\n",
+        "    num_days = days[month] + 1\n",
+        "    if month == 1 and leap:\n",
+        "      num_days += 1\n",
+        "    for number_day in range(1, num_days):\n",
+        "      if number_day == 1 and weekday == 6:\n",
+        "        sundays += 1\n",
+        "      weekday = 0 if (weekday == 6) else weekday + 1\n",
+        "\n",
+        "print(sundays)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vjxaAm5_GAb4",
+        "outputId": "b19d7432-fb7f-4088-832c-6e699796cacc"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "171\n"
           ]
         }
       ]
