add factorial digit sum

--- a/ProjectEulerSolutions.ipynb
+++ b/ProjectEulerSolutions.ipynb
@@ -6,7 +6,7 @@
       "name": "ProjectEulerSolutions.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMQE11EC61w3rFqsNmaDSf1"
+      "authorship_tag": "ABX9TyM+T/cLWKR5ZjvwSMRO9zqX"
     },
     "kernelspec": {
       "name": "python3",
@@ -1121,6 +1121,40 @@
           "text": [
             "1\n",
             "171\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### [Factorial digit sum](https://projecteuler.net/problem=20)"
+      ],
+      "metadata": {
+        "id": "tqccGwbwch75"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "print(sum([int(dig) for dig in str(math.factorial(100))]))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "brSsE-RCcn_7",
+        "outputId": "7368d0e8-76e2-4273-dd46-0659c6c68aed"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "648\n"
           ]
         }
       ]
