add amicable numbers

--- a/ProjectEulerSolutions.ipynb
+++ b/ProjectEulerSolutions.ipynb
@@ -6,7 +6,7 @@
       "name": "ProjectEulerSolutions.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM+T/cLWKR5ZjvwSMRO9zqX"
+      "authorship_tag": "ABX9TyNoizuBKEp0FBI5CGStiMKC"
     },
     "kernelspec": {
       "name": "python3",
@@ -1155,6 +1155,57 @@
           "name": "stdout",
           "text": [
             "648\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### [Amicable numbers](https://projecteuler.net/problem=21)"
+      ],
+      "metadata": {
+        "id": "D9W-e7cJHyLz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "def d(n):\n",
+        "  divisor_sum = 1\n",
+        "  for i in range(2, int(math.sqrt(n)) + 1):\n",
+        "    if (n % i) == 0:\n",
+        "      divisor_sum += i\n",
+        "      if (n / i) != i:\n",
+        "        divisor_sum += (n / i)\n",
+        "  return divisor_sum\n",
+        "\n",
+        "sum = 0\n",
+        "\n",
+        "for i in range(1, 10000):\n",
+        "  a = d(i)\n",
+        "  b = d(a)\n",
+        "  if b == i and a != b:\n",
+        "    sum += i\n",
+        "print(sum)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ucvs5lyKH1vr",
+        "outputId": "8e548ec6-e2bd-4bc0-d07d-b3a29a89f755"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "31626\n"
           ]
         }
       ]
