add non-abundant sums

--- a/ProjectEulerSolutions.ipynb
+++ b/ProjectEulerSolutions.ipynb
@@ -6,7 +6,7 @@
       "name": "ProjectEulerSolutions.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMDa0w5cv+RDIT5m5CTYjCV"
+      "authorship_tag": "ABX9TyOHWB3jQBeHRKgEaAjtydRT"
     },
     "kernelspec": {
       "name": "python3",
@@ -1252,6 +1252,63 @@
           "name": "stdout",
           "text": [
             "871198282\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### [Non-abundant sums](https://projecteuler.net/problem=23)"
+      ],
+      "metadata": {
+        "id": "_Fv1lSiKyhBp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "def divisor_sum(n):\n",
+        "  divisor_sum = 1\n",
+        "  for i in range(2, int(math.sqrt(n)) + 1):\n",
+        "    if (n % i) == 0:\n",
+        "      divisor_sum += i\n",
+        "      if (n / i) != i:\n",
+        "        divisor_sum += (n / i)\n",
+        "  return divisor_sum\n",
+        "\n",
+        "abundants = {}\n",
+        "for i in range(1, 28124):\n",
+        "  if divisor_sum(i) > i:\n",
+        "    abundants[i] = True\n",
+        "\n",
+        "total = sum([i for i in range(1, 24)])\n",
+        "for i in range(25, 28124):\n",
+        "  can_be_sum = False\n",
+        "  for k, v in abundants.items():\n",
+        "    if (i - k) in abundants:\n",
+        "      can_be_sum = True\n",
+        "      break\n",
+        "  if not can_be_sum:\n",
+        "    total += i\n",
+        "\n",
+        "print(total)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9EMOaTAhyqPc",
+        "outputId": "db34e136-cb69-4e6e-97fe-af86d26e41e5"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4179871\n"
           ]
         }
       ]
