add lexicographic permutation

--- a/ProjectEulerSolutions.ipynb
+++ b/ProjectEulerSolutions.ipynb
@@ -5,8 +5,13 @@
     "colab": {
       "name": "ProjectEulerSolutions.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOHWB3jQBeHRKgEaAjtydRT"
+      "collapsed_sections": [
+        "gUPCP7OLTKS7",
+        "Z0SShNWBF7l_",
+        "tqccGwbwch75",
+        "u8407ssIrSJT"
+      ],
+      "authorship_tag": "ABX9TyM4h7X4D/PGHQYFD3jlMpJC"
     },
     "kernelspec": {
       "name": "python3",
@@ -1113,7 +1118,7 @@
         "id": "vjxaAm5_GAb4",
         "outputId": "b19d7432-fb7f-4088-832c-6e699796cacc"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1148,7 +1153,7 @@
         "id": "brSsE-RCcn_7",
         "outputId": "7368d0e8-76e2-4273-dd46-0659c6c68aed"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1199,7 +1204,7 @@
         "id": "Ucvs5lyKH1vr",
         "outputId": "8e548ec6-e2bd-4bc0-d07d-b3a29a89f755"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1245,7 +1250,7 @@
         "id": "1AtGfxhmrWQU",
         "outputId": "c41f4378-18e5-402b-deb3-e1dfea099361"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1302,13 +1307,62 @@
         "id": "9EMOaTAhyqPc",
         "outputId": "db34e136-cb69-4e6e-97fe-af86d26e41e5"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "4179871\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### [Lexicographic permutations](https://projecteuler.net/problem=24)"
+      ],
+      "metadata": {
+        "id": "G7VE00er7iVl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "digits = '0123456789'\n",
+        "\n",
+        "def permutation(s):\n",
+        "  permutations = []\n",
+        "  permutation_helper(s, \"\", permutations)\n",
+        "  return permutations\n",
+        "\n",
+        "def permutation_helper(s, prefix, permutations):\n",
+        "  if len(s) == 0:\n",
+        "    permutations.append(int(prefix))\n",
+        "  else:\n",
+        "    for i in range(len(s)):\n",
+        "      rest = s[0:i] + s[i + 1:]\n",
+        "      permutation_helper(rest, prefix + s[i], permutations)\n",
+        "\n",
+        "perms = permutation(digits)\n",
+        "perms.sort()\n",
+        "print(perms[999_999])\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Oxx5-72C7oKw",
+        "outputId": "809ce47c-cdbe-4a0c-c79d-70cfa29b8e45"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2783915460\n"
           ]
         }
       ]
