add 1000-digit fibonacci number

--- a/ProjectEulerSolutions.ipynb
+++ b/ProjectEulerSolutions.ipynb
@@ -11,7 +11,7 @@
         "tqccGwbwch75",
         "u8407ssIrSJT"
       ],
-      "authorship_tag": "ABX9TyM4h7X4D/PGHQYFD3jlMpJC"
+      "authorship_tag": "ABX9TyO+udF6kDIVholA7qJOT+Wh"
     },
     "kernelspec": {
       "name": "python3",
@@ -1363,6 +1363,51 @@
           "name": "stdout",
           "text": [
             "2783915460\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### [1000-digit Fiboonacci Number](https://projecteuler.net/problem=25)"
+      ],
+      "metadata": {
+        "id": "4AxmtK6wImYr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "first = 89\n",
+        "second = 144\n",
+        "first_index = 11\n",
+        "second_index = 12\n",
+        "\n",
+        "while True:\n",
+        "  temp = second\n",
+        "  second = first + second\n",
+        "  first = temp\n",
+        "  first_index += 1\n",
+        "  second_index += 1\n",
+        "  if len(str(second)) >= 1000:\n",
+        "    print(second_index)\n",
+        "    break"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VEWLLWudIqVk",
+        "outputId": "660490ca-f5d9-4827-d9e7-fa620c0dc90d"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4782\n"
           ]
         }
       ]
